static/stylesheets/main.css
body {
  overflow-x: hidden; /* needed to extend student menu border to edges */
}

.button {
  font-size: 14px;
  font-family: 'Oxygen', sans-serif;
  text-decoration: none;
  background-color: #c6979d;
  color: #000000;
  padding: 5px 12px 5px 12px;
  margin: 3px;
  border-radius: 0.2em;
}

.button:hover {
  background-color: #d6979d;
}

/***** base.html *****/
.message {
  padding: 20px;
  background-color: #2196F3;
  color: white;
  
  animation:message 0.5s 1;
  -webkit-animation:message 0.5s 1;
  animation-fill-mode: forwards;

  animation-delay:3s;
  -webkit-animation-delay:2s; /* Safari and Chrome */
  -webkit-animation-fill-mode: forwards;
}

.message_closebtn {
  margin-left: 15px;
  color: white;
  font-weight: bold;
  float: right;
  font-size: 22px;
  line-height: 20px;
  cursor: pointer;
  transition: 0.3s;
}

.message_closebtn:hover {
  color: black;
}

@keyframes message{
    from {opacity :1;}
    to {opacity :0;}
}

@-webkit-keyframes message{
    from {opacity :1;}
    to {opacity :0;}
}

/***** admin viewable pages *****/
/* menu-main and menu-teacher (below) should match */
#menu-main h3 {
  margin: 18px 0px 3px 0px;
}
#menu-main ul {
  margin: 0px 0px 25px 0px;
  padding: 1px 0px 0px 10px;
  list-style-type: none;
}
#menu-main li {
  padding: 0px 0px 2px 0px;
}
#menu-main a {
  text-decoration: none;
}
#menu-main a:hover {
  text-decoration: underline;
}

textarea {
  width:60%;
  height:300px
}
.left-right-padding {
  padding-left:10px;
  padding-right:10px;
}
.highlight:hover {
  background-color: #ffff99;
}
.setup-example {
  border: solid;
  border-width: thin;
  margin: 4px 8px 13px 0px;
  padding: 4px;
  background-color: #dddddd;
}

.setup {
  display: flex;
}
.setup-html {
  width: 300px;
  margin: 0px 5px 0px 5px;
}
.setup-html textarea {
  box-sizing: border-box;
  width: 100%;
  padding: 0px 5px 0px 5px;
}
.preview-label {
  border-left: 1px solid grey;
  border-top: 1px solid grey;
  border-right: 1px solid grey;
  background-color: darkseagreen;
  padding-left: 5px;
}
.setup-instructions {
  margin-bottom: 8px;
}
.setup-preview {
  border: 1px solid grey;
  padding: 5px;
}

.autoreg-select{
  margin-bottom: 8px;
  margin-left: 35px;
}
.autoreg-grid {
  display: grid;
  grid-template-columns: 330px 300px;
}
.autoreg-button, #autoreg-textbox, #autoreg-warning {
  margin-left: 35px;
}

.config-group {
  padding-bottom: 12px;
  padding-left: 5px;
}
.config-date-label {
  display: inline-block;
  width: 40px;
  height: 23px;
  text-align: right;
}
#modal-div {
  visibility: hidden;
  position: absolute;
  left: 0px;
  top: 0px;
  width:100%;
  height:100%;
  text-align:center;
  z-index: 1000;
  background-image:url(../images/blue-wave-transparent-background.png);
}
#modal-div div {
  width:400px;
  margin: 100px auto;
  background-color: #def;
  border:1px solid #000;
  padding:15px;
  text-align:center;
}
#modal-div div ul{
  text-align:left;
}
#cancel-button {
  font-size:18px;
}

#email-main {
  display: flex;
  flex-direction: column;
  background-color: #F4F4F4;
  padding: 10px 0px 10px 15px;
  margin: 0px 0px 40px 0px;
  width: 780px;
}
#email-heading {
  display: flex;
  flex-direction: row;
}
.email-item {
  padding: 3px 20px 3px 20px;
}
.email-list {
  min-width: 750px;
  height: 100px;
  resize: none;
}
.email-copybtn {
  height: 26px;
}

/***** teacher viewable pages *****/
#main-teacher {
  padding: 0px 8px;
  display: flex;
  background-color: #fff;
}

/* menu-teacher should match menu-main above */
#menu-teacher {
  vertical-align: 'top';
  border-right: 1px solid black;
  padding: 5px;
}
#menu-teacher h3 {
  margin: 18px 0px 3px 0px;
}
#menu-teacher ul {
  margin: 0px 0px 25px 0px;
  padding: 1px 0px 0px 10px;
  list-style-type: none;
}
#menu-teacher li {
  padding: 0px 0px 2px 0px;
}
#menu-teacher a {
  text-decoration: none;
}
#menu-teacher a:hover {
  text-decoration: underline;
}

#view-teacher {
  padding: 8px 8px;
  display: flex;
  flex-direction: column;
  width: 80%;
}
#view-registration {
  display: flex;
  flex-direction: row;
}
#legend {
  display: flex;
  flex-direction: column;
  border-radius:0.2em;
  border: 2px solid #666666;
  margin: 10px 160px 10px 160px;
  background-color: #f0f0f0;
}
#legend1 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 6px 0px 2px 0px;
}
#legend1 div {
  margin: 0px 10px 0px 10px;
  max-width:200px;
  border: 1px solid #666666;
  border-radius:0.2em;
  padding:0.15em 0.3em;
  line-height:1.0;
}
#legend2 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 2px 0px 2px 0px;
}
#legend span {
  background-color: lightgreen;
}
#legend-remaining {
  background-color: #cccfe1;
}
#legend-zero {
  background-color: #eeeecc;
}
#legend-lottery {
  background-color: pink;
}
#attend-date {
  margin: 0px 0px 10px 0px;
}
#attend-select {
  margin: 0px 0px 10px 0px;
}
#attend-buttons {
  margin: 5px 0px 0px 0px;
}
#attend-edit {
  width: 70px;
  height: 26px;
  margin: 0px 10px 0px 0px;
}
#attend-submit {
  width: 70px;
  height: 26px;
}
.attend-view-by {
  margin: 10px 0px 15px 0px;
  display: flex;
  font-size: 18px;
}
.attend-view-by > label {
  margin-right: 5px;
  margin-left: 15px;
}
#attend-view-class {
  margin: 0px 0px 60px 0px;
  border: 1px solid #555;
  border-radius: 5px;
}
#attend-view-header {
  border-bottom: 1px solid #555;
  background-color: #d1dfe3;
  padding: 6px 0px 4px 7px;
  border-radius: 5px 5px 0px 0px;
  font-weight: bold;
}
#attend-view-class-table {
  /*border-left: 1px solid #555;
  border-right: 1px solid #555;*/
  border-collapse: collapse;
}
#attend-view-class-table th, #attend-view-class-table td {
  padding: 2px 8px 0;
  border: 1px solid #ccc;
  border-collapse: collapse;
}
#attend-view-class-table tbody tr:nth-child(odd) {
  background-color: #f1f1f1;;
}
.attend-homeroom {
  font-size: 28px;
  width = 400px;
  border: 1px solid #ccc;
  text-align: center;
  background-color: burlywood;
  margin-top: 10px;
}
/***** student viewable pages *****/
/* header, menu, common sections **/

#body-user {
  margin: 0px;
  display: flex;
  flex-direction: column;
}
#header-user {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  font-family: 'Oxygen', sans-serif;
  background-color: #f1f1f1;
  min-width: 900px;
  min-height: 70px;
}
#logo-user {
  padding: 5px 5px 0px 5px;
  display: flex;
  align-items: center;
}
#title-user {
  font-size: 20px;
  font-weight: bold;
  padding: 5px;
}
#session-user {
  font-size: 24px;
  font-weight: bold;
}
#login-user {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}
#email-user {
  font-size: 15px;
  margin: 0px 0px 5px 0px;
}
#menu-user-wrapper {
  background-color: #f1f1f1;
  display: flex;
  justify-content: center;
  min-width: 800px;
  font-family: 'Oxygen', sans-serif;
}
#menu-user-spacer-left {
  width: 10%;
  border-bottom: 2px solid #888888;
  /* trick to extend bottom border of spacer to edge */
  padding-left: 1000px;
  margin-left: -1000px;
}
#menu-user-spacer-right {
  width: 10%;
  border-bottom: 2px solid #888888;
  /* trick to extend bottom border of spacer to edge */
  padding-right: 1000px;
  margin-right: -1000px;
}
#menu-user {
  display: flex;
  max-width: 780px;
  list-style-type: none;
  padding: 0px;
  margin: 0px;
}
#menu-user a {
  text-decoration: none;
}
/* Need ".menu-user .menu-user-active" to
   increase specificity otherwise this will be lower
   than ".menu-user li" and border-bottom is not erased. */
#menu-user .menu-user-active {
  background-color: #ffffff;
  border-top: 2px solid #888888;
  border-left: 2px solid #888888;
  border-right: 2px solid #888888;
  border-bottom: #ffffff;
  border-radius: 5px 5px 0px 0px;
}
#menu-user li {
  padding: 8px 50px 16px 50px;
  border-bottom: 2px solid #888888;
}
#menu-user li a:hover {
  color: #f4511e;
}

#welcome-user {
  display: block;
  padding: 0px 16px;
  margin: auto;
}
#main-user {
  padding: 0px 12px;
  display: flex;
  background-color: #fff;
  justify-content: center;
}
.profile-user {
  display: flex;
  align-items: baseline;
  padding-left: 16px;
}
.profile-data {
  margin-right: 1em;
  margin-block-start: .5em;
  margin-block-end: .2em;
}
.profile-print {
  margin-left: auto;
}


/* student schedule page */

.schedHeader {
  text-align: center;
  min-width:200px;
  font-size:120%;
  font-weight:bold;
}
.schedOrderedList {
  list-style-type:none; 
  box-sizing: border-box;
  border: 2px solid #666666;
  border-radius:0.3em;
  margin:0 0.4em 0.4em 0;
  padding:0.4em;
}    
.schedListItem {
  cursor: pointer; cursor: hand;
  background:#eeeeff;

  max-width:200px;
  border: 1px solid #666666;
  border-radius:0.2em;
  margin:0 0 1px 0;
  padding:0.15em 0.3em;
  line-height:1.0;
}
.schedBlockLabel {
  vertical-align:middle;
  font-size:200%;
  font-weight:bold;
}
.schedTableData {
  vertical-align:top;
}
.schedPostRegItem {
  max-width:200px;
  text-align: center;
  min-width:200px;
  box-sizing: border-box;
  border: 2px solid #666666;
  border-radius:0.3em;
}
.schedPostRegHeader {
  text-align: center;
  min-width:200px;
  font-size:120%;
  font-weight:bold;
  padding-top:25px;
}
.schedPostRegRowHeader {
  text-align: right;
  width:5px;
}
#info-panel {
  border: solid grey;
  border-radius: 2%;
  width: 350px;
  padding: 8px;
  margin: 5px;
}
/* description divs within #info-panel */
#info-panel #description, #info-panel div {
  padding-top: 4px;
  padding-bottom: 4px;
}
/* direct children (other fields besides description) */
#info-panel > div {
  padding-top: 0px;
  padding-bottom: 2px;
}
#info-panel ul {
  padding-top: 0px;
  margin-block-start: .2em;
}



/* student preference page */

.prefGroup {
  display: flex;
}
.prefHeader {
  width:300px;
  text-align: center;
  min-width:300px;
  margin:0 0.5em 0.5em 0;
}
.prefOrderedList {
  width:300px;
  list-style-type:none;
  box-sizing: border-box;
  border: 2px solid #666666;
  border-radius:0.3em;
  margin:0 0.5em 0.5em 0;
  padding:0.5em;
  background:#eee;
  min-width:300px;
}
.prefListItem {
  cursor: move;
  border: 1px solid #666666;
  border-radius:0.2em;
  margin:0 0 2px 0;
  padding:0.2em 0.4em;
  line-height:1.3;
  background:#ddd;
  min-width:250px;
}


/***** attendance *****/

table.attendanceHeader {
  font-size: 1.1em;
  border-collapse: collapse;
}
table.attendanceHeader td.name {
  min-width: 450px;
  max-width: 450px;
  font-size: 1.7em;
  font-weight: 700;
}
table.attendanceHeaderDetails td {
  padding-right: 10px;
}
table.attendance {
  border: 1px solid black;
  border-collapse: collapse;
  margin-bottom: 5px;
}
table.attendance td, table.attendance th, table.attendance tr {
  border: 1px solid black;
}
table.attendance tr:nth-child(even) {
  background-color: beige;
  -webkit-print-color-adjust: exact;
}
table.attendanceLegend {
  font-size: 0.8em;
  border: 1px solid black;
  border-collapse: collapse;
}

/***** absence *****/
.danger {
  background-color: pink;
}
#absence-view-classes-table, #absence-view-absences-table {
  border-collapse: collapse;
  margin-top: 25px;
}
#absence-view-classes-table th, #absence-view-classes-table td, #absence-view-absences-table th, #absence-view-absences-table td {
  padding: 2px 8px 0;
  border: 1px solid #ccc;
  border-collapse: collapse;
}
#absence-view-classes-table tbody tr:nth-child(odd), #absence-view-absences-table tbody tr:nth-child(odd) {
  background-color: #f1f1f1;;
}

